--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "unoff-payloadcms-supabase-storage-adapter",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "An unofficial implementation for payloadcms supabase storage adapter",
     "main": "./dist/src/index.js",
     "types": "./dist/src/index.d.ts",
@@ -41,7 +41,7 @@
     },
     "homepage": "https://github.com/Troll321/unoff-payloadcms-supabase-storage-adapter#readme",
     "dependencies": {
-        "@payloadcms/plugin-cloud-storage": "workspace:*",
+        "@payloadcms/plugin-cloud-storage": "^3.74.0",
         "@supabase/supabase-js": "^2.94.0"
     },
     "peerDependencies": {
